jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: jenkins
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-04-16T07:39:06Z"
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-5.8.33
  name: jenkins
  namespace: default
  resourceVersion: "145658"
  uid: 640d4c4b-0b75-497a-8fc2-bba0f8573668
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.102.59.30
  clusterIPs:
  - 10.102.59.30
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerSourceRanges:
  - 0.0.0.0/0
  ports:
  - name: http
    nodePort: 31630
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
