grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
