ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/jenkins`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
      middlewares:
        - name: jenkins-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
      middlewares:
        - name: prometheus-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jenkins-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /jenkins
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: grafana-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /grafana
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
