jenkins-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.local`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
  # Enable TLS if needed
  # tls:
  #   secretName: jenkins-tls-cert
