prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 9090
  # Enable TLS if needed
  # tls:
  #   secretName: prometheus-tls-cert
